homepage + about me HTML

--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Portfolio</title>
+    <title>About Me</title>
 </head>
 <body>
-    <header>
+     <!-- Navigation Bar -->
+     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,13 +20,59 @@
         </nav>
     </header>
 
-    <main>
-        <h1>Welcome to My Portfolio!</h1>
-        <p>This is a placeholder text until I update my content.</p>
-    </main>
+<!-- Main Content -->
+<main>
+    <section id="about">
+        <h1>About Me</h1>
+        <figure>
+            <!-- <img src="assets/images/placeholder-headshot.jpg" alt="Headshot" width="150"> -->
+            <img src="assets/images/blank-profile.jpg" alt="Headshot" width="150">
+            <figcaption>Placeholder image for headshot</figcaption>
+        </figure>
+        <p>Hi, I'm Rachel! I'm a senior studying Computer Science at UC San Diego, passionate about building efficient and user-friendly web applications. With a strong foundation in software development and problem-solving, I'm eager to start my career as a Software Engineer. Welcome to my portfolio!</p>
+    </section>
 
-    <footer>
-        <p>Copyright © 2025</p>
-    </footer>
+    <section id="background">
+        <h2>Background</h2>
+        <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Vestibulum eu tortor iaculis hac dapibus magna facilisis massa. Vulputate mattis luctus purus euismod aptent etiam. Dictumst fames tempus dignissim ut tempor? Cubilia at ultrices fames eu mus augue ridiculus arcu. Vel nullam mi pharetra ante bibendum torquent urna elit. Porttitor penatibus nibh fermentum enim neque ultrices imperdiet. Dictum maecenas per ante morbi quisque. Per vestibulum ornare class sodales ex ipsum mauris. Dui hac montes vulputate interdum ridiculus lorem nostra.</p>
+        <blockquote>
+            “A good programmer is someone who always looks both ways before crossing a one-way street.” - Doug Linder
+        </blockquote>
+    </section>
+
+    <section id="skills">
+        <h2>Skills & Interests</h2>
+        <ul>
+            <li>Front-End Development: HTML, CSS, JavaScript</li>
+            <li>Database Management: MongoDB, Firebase</li>
+            <li>Testing & Debugging: JUnit, Robot Framework</li>
+            <li>Low-Level Programming: x86, ARM Assembly, SystemVerilog</li>
+            <li>Software Engineering Concepts: Data Structures & Algorithms, Object-Oriented Programming, Agile Development</li>
+        </ul>
+    </section>
+
+    <section id="fun-facts">
+        <h2>Fun Facts About Me</h2>
+        <dl>
+            <dt>Favorite Coding Language</dt>
+            <dd>Python</dd>
+
+            <dt>Hobbies</dt>
+            <dd>Indoor bouldering, badminton, and stargazing</dd>
+
+            <dt>Dream Job</dt>
+            <dd>Back-End Developer at a tech company</dd>
+        </dl>
+    </section>
+</main>
+
+<!-- Footer -->
+<footer>
+    <address>
+        Contact me at: <a href="mailto:rchau@ucsd.edu">rchau@ucsd.edu</a>
+    </address>
+    <p>&copy; 2025</p>
+</footer>
 </body>
+
 </html>
