--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="description" content="Homepage for personal portfolio website for CSE 134B"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Portfolio</title>
+    <title>Rachel Chau's Portfolio</title>
 </head>
+
 <body>
+    <!-- Navigation Bar -->
     <header>
         <nav>
             <ul>
@@ -19,13 +22,41 @@
         </nav>
     </header>
 
+    <!-- Main Content Section -->
     <main>
-        <h1>Welcome to My Portfolio!</h1>
-        <p>This is a placeholder text until I update my content.</p>
+        <section id="headshot">
+            <!-- Placeholder Image for Headshot -->
+            <img src="assets/images/blank-profile.jpg" alt="Headshot" width="150">
+        </section>
+
+        <section id="welcome-message">
+            <h1>Welcome to My Portfolio!</h1>
+            <p>I'm Rachel, a senior Computer Science student at UC San Diego with a passion for web development and software engineering. I love solving problems, writing clean code, and building intuitive applications. Explore my portfolio to see my work!</p>
+        </section>
+
+        <section id="bio">
+            <h2>Short Bio</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa.</p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Java</li>
+                <li>Python</li>
+                <li>C</li>
+                <li>SQL</li>
+                <li>x86</li>
+                <li>JUnit</li>
+                <li>MongoDB</li>
+                <li>TKinter</li>
+            </ul>
+        </section>
     </main>
 
     <footer>
         <p>Copyright © 2025</p>
     </footer>
 </body>
+
 </html>
