--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Homepage for personal portfolio website for CSE 134B"
+    <meta name="description" content="Homepage for personal portfolio website for CSE 134B">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rachel Chau's Portfolio</title>
