--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Portfolio</title>
+    <title>Projects - Rachel's Portfolio</title>
 </head>
 <body>
     <header>
+        <h1>My Projects</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,9 +21,46 @@
     </header>
 
     <main>
-        <h1>Welcome to My Portfolio!</h1>
-        <p>This is a placeholder text until I update my content.</p>
+        <section>
+            <h2 id="projects-heading">Featured Projects</h2>
+
+            <div class="project">
+                <figure>
+                    <img src="pantryPal.png" alt="Screenshot of Project 1">
+                    <figcaption>Pantry Pal - Recipe Generator</figcaption>
+                </figure>
+                <h3><a href="pantryPal.html">Pantry Pal</a></h3>
+                <p>A short summary of the project, highlighting key features and technologies used. Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate sociosqu mus eu dolor inceptos. </p>
+            </div>
+
+            <div class="project">
+                <figure>
+                    <img src="eventify.png" alt="Screenshot of Project 2">
+                    <figcaption>Eventify - Campus Event Board</figcaption>
+                </figure>
+                <h3><a href="eventify.html">Eventify</a></h3>
+                <p>A short summary of the project, highlighting key features and technologies used. Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate sociosqu mus eu dolor inceptos. </p>
+            </div>
+
+            <div class="project">
+                <figure>
+                    <img src="airbnbPred.png" alt="Screenshot of Project 3">
+                    <figcaption>AirBnb Price Predictions - Machine Learning</figcaption>
+                </figure>
+                <h3><a href="airbnbPred.html">Project 3</a></h3>
+                <p>A short summary of the project, highlighting key features and technologies used. Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate sociosqu mus eu dolor inceptos. </p>
+            </div>
+
+        </section>
     </main>
+
+    <aside>
+        <h2>Other Works</h2>
+        <ul>
+            <li><a href="artAnalysis.html">AI vs. Human Generated Art</a></li>
+            <li><a href="mdparser.html">Markdown Parser</a></li>
+        </ul>
+    </aside>
 
     <footer>
         <p>Copyright © 2025</p>
