fix section validator

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     <!-- Main Content Section -->
     <main>
-        <section id="headshot">
+        <div id="headshot">
             <!-- Placeholder Image for Headshot -->
             <img src="assets/images/blank-profile.jpg" alt="Headshot" width="150">
-        </section>
+        </div>
 
         <section id="welcome-message">
             <h1>Welcome to My Portfolio!</h1>
