contact page html

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         <h2>Fun Facts About Me</h2>
         <dl>
             <dt>Favorite Coding Language</dt>
-            <dd>Python</dd>
+            <dd><pre><del>Java</del> <ins>Python</ins></pre></dd>
 
             <dt>Hobbies</dt>
             <dd>Indoor bouldering, badminton, and stargazing</dd>
