add noscript tag to all pages

--- a/about.html
+++ b/about.html
@@ -64,6 +64,11 @@
             <dd>Back-End Developer at a tech company</dd>
         </dl>
     </section>
+
+    <noscript>
+        <p>JavaScript is disabled. Some features may not work properly.</p>
+    </noscript>
+
 </main>
 
 <!-- Footer -->
