--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 <li>TKinter</li>
             </ul>
         </section>
+
+        <noscript>
+            <p>JavaScript is disabled. Some features may not work properly.</p>
+        </noscript>
+
     </main>
 
     <footer>
