--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,11 @@
             </div>
 
         </section>
+
+        <noscript>
+            <p>JavaScript is disabled. Some features may not work properly.</p>
+        </noscript>
+
     </main>
 
     <aside>
