search and details/summary

--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,11 @@
     </header>
 
     <main>
+        <search>
+            <input type="text" placeholder="Search projects...">
+            <button>🔍</button>
+        </search>
+
         <section>
             <h2 id="projects-heading">Featured Projects</h2>
 
@@ -62,7 +67,10 @@
     <aside>
         <h2>Other Works</h2>
         <ul>
-            <li><a href="artAnalysis.html">AI vs. Human Generated Art</a></li>
+            <li><details>
+                <summary><a href="artAnalysis.html">AI vs. Human Generated Art</a></summary>
+                <iframe src="https://www.youtube.com/watch?v=qfcKpxaFuBo"></iframe>
+            </details></li>
             <li><a href="mdparser.html">Markdown Parser</a></li>
         </ul>
     </aside>
