--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <hgroup>
             <h1>Rachel Chau's Portfolio</h1>
-            <h2>Software Engineer in the Making</h2>
+            <p>Software Engineer in the Making</p>
         </hgroup>
 
         <nav>
@@ -35,7 +35,7 @@
         </div>
 
         <section id="welcome-message">
-            <h1>Welcome to My Portfolio!</h1>
+            <h2>Welcome to My Portfolio!</h2>
             <p>I'm Rachel, a senior Computer Science student at <abbr title="University of California, San Diego">UCSD</abbr> with a passion for web development and software engineering. I love solving problems, writing clean code, and building intuitive applications. Explore my portfolio to see my work!</p>
         </section>
 
