--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rachel Chau's Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         body {
             font-family: Calibri, sans-serif;
