fix typo for validator

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <figure>
             <picture>
                 <source srcset="assets/images/blank-profile.jpg" type="image/jpeg">
-                <img src="assets/images/blank-profile.jpg" alt="Headshot", width="150">
+                <img src="assets/images/blank-profile.jpg" alt="Headshot" width="150">
             </picture>
             <figcaption>Placeholder image for headshot</figcaption>
         </figure>
