--- a/projects.html
+++ b/projects.html
@@ -17,14 +17,18 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            <search>
+                <input type="text" placeholder="Search projects...">
+                <button>Search</button>
+            </search>
         </nav>
     </header>
 
     <main>
-        <search>
+        <!-- <search>
             <input type="text" placeholder="Search projects...">
-            <button>🔍</button>
-        </search>
+            <button>Search</button>
+        </search> -->
 
         <section>
             <h2 id="projects-heading">Featured Projects</h2>
