trying search in experiment

--- a/experiments.html
+++ b/experiments.html
@@ -82,6 +82,15 @@
             <h3>KBD Experiment</h3>
             <p>Press <kbd>Ctrl</kbd> + <kbd>W</kbd> to close this tab.</p>
         </section>
+
+        <section id="search-experiement">
+            <h3>Search Experiment</h3>
+            <search>
+                <input type="text" placeholder="Search projects...">
+                <button>Search</button>
+            </search>
+        </section>
+
     </main>
 
     <footer>
