move search into form

--- a/projects.html
+++ b/projects.html
@@ -20,16 +20,13 @@
         </nav>
     </header>
 
-    <search>
-        <input type="text" placeholder="Search projects...">
-        <button>Search</button>
-    </search>
-
     <main>
-        <!-- <search>
-            <input type="text" placeholder="Search projects...">
-            <button>Search</button>
-        </search> -->
+        <form>
+            <search>
+                <input type="text" placeholder="Search projects...">
+                <button>Search</button>
+            </search>
+        </form>
 
         <section>
             <h2 id="projects-heading">Featured Projects</h2>
