--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,8 @@
         <ul>
             <li><details>
                 <summary><a href="artAnalysis.html">AI vs. Human Generated Art</a></summary>
-                <iframe src="https://www.youtube.com/watch?v=qfcKpxaFuBo"></iframe>
+                <!-- <iframe src="https://www.youtube.com/watch?v=qfcKpxaFuBo"></iframe> -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qfcKpxaFuBo?si=RA-l4Jl-i_qhRcDd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </details></li>
             <li><a href="mdparser.html">Markdown Parser</a></li>
         </ul>
