remove hw2 experiments

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rachel Chau's Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-        body {
-            font-family: Calibri, sans-serif;
-        }
-    </style>
 </head>
 
 <body>
@@ -29,7 +24,6 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="experiments.html">Experiments</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +37,7 @@
 
         <section id="welcome-message">
             <h2>Welcome to My Portfolio!</h2>
-            <p>I'm Rachel, a senior Computer Science student at <abbr title="University of California, San Diego">UCSD</abbr> with a passion for web development and software engineering. I love solving problems, writing clean code, and building intuitive applications. Explore my portfolio to see my work!</p>
+            <p>I'm Rachel, a senior Computer Science student at <abbr title="University of California, San Diego">UC San Diego</abbr> with a passion for web development and software engineering. I love solving problems, writing clean code, and building intuitive applications. Explore my portfolio to see my work!</p>
         </section>
 
         <section id="bio">
