--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projects - Rachel's Portfolio</title>
+    <script src="js/project-card.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>My Projects</h1>
+        <h1>Rachel Chau</h1>
+
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,39 +24,16 @@
     </header>
 
     <main>
-        <search>
-            <input type="text" placeholder="Search projects...">
-            <button>Search</button>
-        </search>
-
         <section>
             <h2 id="projects-heading">Featured Projects</h2>
 
-            <div class="project">
-                <figure>
-                    <img src="pantryPal.png" alt="Screenshot of Project 1">
-                    <figcaption>Pantry Pal - Recipe Generator</figcaption>
-                </figure>
-                <h3><a href="pantryPal.html">Pantry Pal</a></h3>
-                <p>A short summary of the project, highlighting key features and technologies used. Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate sociosqu mus eu dolor inceptos. </p>
+            <div id="buttons-container"> 
+                <button id="load-local">Load Local</button>
+                <button id="load-remote">Load Remote</button>
             </div>
 
-            <div class="project">
-                <figure>
-                    <img src="eventify.png" alt="Screenshot of Project 2">
-                    <figcaption>Eventify - Campus Event Board</figcaption>
-                </figure>
-                <h3><a href="eventify.html">Eventify</a></h3>
-                <p>A short summary of the project, highlighting key features and technologies used. Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate sociosqu mus eu dolor inceptos. </p>
-            </div>
-
-            <div class="project">
-                <figure>
-                    <img src="airbnbPred.png" alt="Screenshot of Project 3">
-                    <figcaption>AirBnb Price Predictions - Machine Learning</figcaption>
-                </figure>
-                <h3><a href="airbnbPred.html">Project 3</a></h3>
-                <p>A short summary of the project, highlighting key features and technologies used. Lorem ipsum odor amet, consectetuer adipiscing elit. Vulputate sociosqu mus eu dolor inceptos. </p>
+            <div id="projects-container">
+                <!-- will be dynamically created with load buttons -->
             </div>
 
         </section>
@@ -63,18 +43,6 @@
         </noscript>
 
     </main>
-
-    <aside>
-        <h2>Other Works</h2>
-        <ul>
-            <li><details>
-                <summary><a href="artAnalysis.html">AI vs. Human Generated Art</a></summary>
-                <!-- <iframe src="https://www.youtube.com/watch?v=qfcKpxaFuBo"></iframe> -->
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/qfcKpxaFuBo?si=RA-l4Jl-i_qhRcDd" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </details></li>
-            <li><a href="mdparser.html">Markdown Parser</a></li>
-        </ul>
-    </aside>
 
     <footer>
         <p>Copyright © 2025</p>
