remove redundant information between pages, filled in placeholder content

--- a/about.html
+++ b/about.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
      <!-- Navigation Bar -->
      <header>
+        <h1>Rachel Chau</h1>
+        
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,43 +26,20 @@
 <!-- Main Content -->
 <main>
     <section id="about">
-        <h1>About Me</h1>
         <figure>
-            <picture>
-                <source srcset="assets/images/blank-profile.jpg" type="image/jpeg">
-                <img src="assets/images/blank-profile.jpg" alt="Headshot" width="150">
+            <picture id="headshot">
+                <source srcset="assets/images/ks-headshot.jpg" type="image/jpeg">
+                <img src="assets/images/ks-headshot.jpg" alt="Headshot" width="150">
             </picture>
-            <figcaption>Placeholder image for headshot</figcaption>
         </figure>
         <p>Hi, I'm <b>Rachel!</b> I'm a senior studying Computer Science at UC San Diego, passionate about building <em>efficient</em> and <em>user-friendly</em> web applications. With a strong foundation in software development and problem-solving, I'm eager to start my career as a Software Engineer. Welcome to my portfolio!</p>
     </section>
 
     <section id="background">
         <h2>Background</h2>
-        <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Vestibulum eu tortor iaculis hac dapibus magna facilisis massa. Vulputate mattis luctus purus euismod aptent etiam. Dictumst fames tempus dignissim ut tempor? Cubilia at ultrices fames eu mus augue ridiculus arcu. Vel nullam mi pharetra ante bibendum torquent urna elit. Porttitor penatibus nibh fermentum enim neque ultrices imperdiet. Dictum maecenas per ante morbi quisque. Per vestibulum ornare class sodales ex ipsum mauris. Dui hac montes vulputate interdum ridiculus lorem nostra.</p>
-        <blockquote>
-            “A good programmer is someone who always looks both ways before crossing a one-way street.” - <cite>Doug Linder</cite>
-        </blockquote>
-    </section>
-
-    <section id="skills">
-        <h2>Skills & Interests</h2>
-        <ul>
-            <li>Front-End Development: HTML, CSS, JavaScript</li>
-            <li>Database Management: MongoDB, Firebase</li>
-            <li>Testing & Debugging: JUnit, Robot Framework</li>
-            <li>Low-Level Programming: x86, ARM Assembly, SystemVerilog</li>
-            <li>Software Engineering Concepts: Data Structures & Algorithms, Object-Oriented Programming, Agile Development</li>
-        </ul>
-    </section>
-
-    <section id="fun-facts">
-        <h2>Fun Facts About Me</h2>
-        
-    </section>
-
-    <section id="tech-stack">
-        <h2>Technology Experience</h2>
+        <p>Born and raised in sunny San Diego, I’ve always had a thing for adventure—whether that means tackling a tricky bouldering route, chasing the perfect hiking trail, 
+            or staying up way too late just to catch a meteor shower. If there’s an excuse to be outside, I’ll take it. I love a good challenge, and when I do finally slow down, 
+            you’ll probably find me enjoying the quiet, staring up at the night sky, wondering if I should’ve been an astronaut instead.</p>
     </section>
 
     <noscript>
@@ -70,10 +50,7 @@
 
 <!-- Footer -->
 <footer>
-    <address>
-        Contact me at: <a href="mailto:rchau@ucsd.edu">rchau@ucsd.edu</a>
-    </address>
-    <p>&copy; 2025</p>
+    <p>Copyright © 2025</p>
 </footer>
 </body>
 
