--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rachel Chau's Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- Navigation Bar -->
     <header>
-        <hgroup>
-            <h1>Rachel Chau's Portfolio</h1>
-            <p>Software Engineer in the Making</p>
-        </hgroup>
+        <h1>Rachel Chau</h1>
 
         <nav>
             <ul>
@@ -32,17 +30,12 @@
     <main>
         <div id="headshot">
             <!-- Placeholder Image for Headshot -->
-            <img src="assets/images/blank-profile.jpg" alt="Headshot" width="150">
+            <img src="assets/images/sg-headshot.jpg" alt="Headshot" width="150">
         </div>
 
         <section id="welcome-message">
             <h2>Welcome to My Portfolio!</h2>
             <p>I'm Rachel, a senior Computer Science student at <abbr title="University of California, San Diego">UC San Diego</abbr> with a passion for web development and software engineering. I love solving problems, writing clean code, and building intuitive applications. Explore my portfolio to see my work!</p>
-        </section>
-
-        <section id="bio">
-            <h2>Short Bio</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa.</p>
         </section>
 
         <section id="skills">
@@ -52,6 +45,9 @@
                 <li>Python</li>
                 <li>C</li>
                 <li>SQL</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
                 <li>x86</li>
                 <li>JUnit</li>
                 <li>MongoDB</li>
